[metadata]                    ## these all metadetails helps to create pypi library for your own
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2     ## mentioning third-party libraries
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3  ## run unit test and integration tests
    mypy>=0.971    ## mypy helps to check whether there is typing error or not
    flake8>=5.0.4  ## flake helps to identify the syntax and code errors
    tox>=3.25.1    ## tox used to test the different working environments and test applications locally
    black>=22.8.0  ## black is use to check the proper python structure

[options.package_data]
deepClassifier = py.typed  ## ignore the errors in testing in packages
  
[flake8]
max-line-length = 160  ## code length should ne max 160 length 
exclude = __init__.py